[gd_scene load_steps=27 format=3 uid="uid://bu70uuiahdot2"]

[ext_resource type="Script" path="res://Atomic Punk - files/Scripts/player.gd" id="1_axbah"]
[ext_resource type="Texture2D" uid="uid://maj35bsyno76" path="res://Atomic Punk - files/Art Assets/Character/bman-sprites.png" id="2_47e3y"]
[ext_resource type="Texture2D" uid="uid://pue73cey013u" path="res://Atomic Punk - files/Art Assets/Character/idle-front.png" id="2_67pic"]
[ext_resource type="Texture2D" uid="uid://eh67qwe6s82j" path="res://Atomic Punk - files/Art Assets/Character/idle-left-right.png" id="3_87l7y"]
[ext_resource type="Texture2D" uid="uid://r2mqhnaw1aw7" path="res://Atomic Punk - files/Art Assets/Character/idle-back.png" id="4_4yyrd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_npo4u"]
radius = 6.16667
height = 21.3333

[sub_resource type="AtlasTexture" id="AtlasTexture_exw7x"]
atlas = ExtResource("2_47e3y")
region = Rect2(0, 99, 24, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7evn"]
atlas = ExtResource("2_47e3y")
region = Rect2(24, 99, 24, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkgl3"]
atlas = ExtResource("2_47e3y")
region = Rect2(48, 99, 24, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnkhy"]
atlas = ExtResource("2_47e3y")
region = Rect2(72, 99, 24, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ah63"]
atlas = ExtResource("2_47e3y")
region = Rect2(96, 99, 24, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r3ls"]
atlas = ExtResource("2_47e3y")
region = Rect2(120, 99, 24, 31)

[sub_resource type="AtlasTexture" id="AtlasTexture_seble"]
atlas = ExtResource("2_67pic")
region = Rect2(0, 0, 24, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqb8o"]
atlas = ExtResource("3_87l7y")
region = Rect2(0, 0, 24, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_6p72a"]
atlas = ExtResource("4_4yyrd")
region = Rect2(0, 0, 24, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvis7"]
atlas = ExtResource("2_67pic")
region = Rect2(48, 0, 24, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xis7"]
atlas = ExtResource("2_67pic")
region = Rect2(0, 0, 24, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_lc2u4"]
atlas = ExtResource("2_67pic")
region = Rect2(24, 0, 24, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_axw84"]
atlas = ExtResource("3_87l7y")
region = Rect2(48, 1, 23, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyj3v"]
atlas = ExtResource("3_87l7y")
region = Rect2(2, 1, 23, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbxyq"]
atlas = ExtResource("3_87l7y")
region = Rect2(25, 1, 23, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmtb0"]
atlas = ExtResource("4_4yyrd")
region = Rect2(48, 0, 24, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilosq"]
atlas = ExtResource("4_4yyrd")
region = Rect2(0, 0, 24, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_h38jd"]
atlas = ExtResource("4_4yyrd")
region = Rect2(24, 0, 24, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_6w6pm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exw7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7evn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkgl3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnkhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ah63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r3ls")
}],
"loop": true,
"name": &"damege",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_seble")
}],
"loop": true,
"name": &"idle-down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqb8o")
}],
"loop": true,
"name": &"idle-right",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6p72a")
}],
"loop": true,
"name": &"idle-up",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvis7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xis7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lc2u4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xis7")
}],
"loop": true,
"name": &"run-down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_axw84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyj3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbxyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyj3v")
}],
"loop": true,
"name": &"run-right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmtb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilosq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h38jd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilosq")
}],
"loop": true,
"name": &"run-up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phecv"]
size = Vector2(12, 20.5)

[node name="player" type="CharacterBody2D" groups=["player"]]
top_level = true
texture_filter = 1
position = Vector2(65, 68)
scale = Vector2(2, 2)
collision_layer = 32
collision_mask = 79
script = ExtResource("1_axbah")

[node name="collision" type="CollisionShape2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(-0.166672, -0.166668)
shape = SubResource("CapsuleShape2D_npo4u")
debug_color = Color(0, 0.592157, 0.74902, 0.419608)

[node name="animation" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -0.5)
sprite_frames = SubResource("SpriteFrames_6w6pm")
animation = &"idle-right"

[node name="animator" type="AnimationPlayer" parent="."]

[node name="bomb_spawn" type="Marker2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="hurtbox" type="Area2D" parent="." groups=["hurtbox"]]
disable_mode = 2
collision_layer = 16
collision_mask = 12

[node name="collision_hurtbox" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, -0.25)
shape = SubResource("RectangleShape2D_phecv")
debug_color = Color(0.921569, 0.27451, 0.160784, 0.419608)

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
